--- a/app/src/main/res/layout/scraper_list_item.xml
+++ b/app/src/main/res/layout/scraper_list_item.xml
@@ -11,10 +11,20 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Game Name"
-            android:id="@+id/textView10"
+            android:id="@+id/textView_Name"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Index"
+            android:id="@+id/textView_Index"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
 </RelativeLayout>
