--- a/app/src/main/res/layout/fragment_scraper_detail.xml
+++ b/app/src/main/res/layout/fragment_scraper_detail.xml
@@ -7,6 +7,29 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recyclerView"/>
+        android:id="@+id/recyclerView"
+        android:layout_below="@+id/button_Search"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Manual Search"
+        android:id="@+id/button_Search"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText_Search"
+        android:layout_above="@+id/recyclerView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/button_Search"
+        android:layout_toStartOf="@+id/button_Search"
+        android:hint="manual id entry" />
 
 </RelativeLayout>
