--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -20,26 +20,15 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="300dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:id="@+id/imageView_Screenshot"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/placeholder_screenshots" />
+        android:src="@drawable/noscreenshots" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Deck"
-        android:id="@+id/textView_Deck"
-        android:textAlignment="viewStart"
-        android:gravity="start"
-        android:paddingLeft="10dp"
-        android:layout_below="@+id/textView_Name"
-        android:layout_toRightOf="@+id/checkBox_Complete"
-        android:layout_toEndOf="@+id/checkBox_Complete" />
+
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -81,13 +70,155 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Name"
-        android:id="@+id/textView_Name"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Developer"
+        android:id="@+id/textView10"
+        android:paddingTop="5dp"
         android:paddingLeft="10dp"
-        android:layout_below="@id/imageView_Screenshot"
-        android:layout_alignBottom="@+id/checkBox_Complete"
+        android:layout_alignTop="@+id/checkBox_Complete"
         android:layout_toRightOf="@+id/checkBox_Complete"
         android:layout_toEndOf="@+id/checkBox_Complete" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Publisher"
+        android:id="@+id/textView11"
+        android:paddingRight="10dp"
+        android:layout_below="@+id/imageView_Screenshot"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:id="@+id/textView_Developer"
+        android:layout_alignLeft="@id/textView10"
+        android:layout_below="@+id/textView10" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingRight="15dp"
+        android:id="@+id/textView_Publisher"
+        android:layout_below="@+id/textView11"
+        android:layout_alignRight="@+id/textView11"
+        android:layout_alignEnd="@+id/textView11" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Genres"
+        android:id="@+id/textView14"
+        android:layout_below="@+id/textView_Developer"
+        android:layout_alignLeft="@+id/textView_Developer"
+        android:layout_alignStart="@+id/textView_Developer" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Release Date"
+        android:id="@+id/textView15"
+        android:paddingRight="10dp"
+        android:layout_below="@+id/textView_Publisher"
+        android:layout_alignRight="@+id/textView_Publisher"
+        android:layout_alignEnd="@+id/textView_Publisher" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:id="@+id/textView_Genres"
+        android:layout_below="@+id/textView14"
+        android:layout_alignLeft="@+id/textView14"
+        android:layout_alignStart="@+id/textView14" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingRight="15dp"
+        android:id="@+id/textView_Date"
+        android:layout_below="@+id/textView15"
+        android:layout_alignRight="@+id/textView15"
+        android:layout_alignEnd="@+id/textView15" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Players"
+        android:id="@+id/textView18"
+        android:paddingLeft="10dp"
+        android:layout_below="@+id/textView_Genres"
+        android:layout_alignLeft="@+id/textView_Genres"
+        android:layout_alignStart="@+id/textView_Genres" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:paddingRight="10dp"
+        android:text="Co-op"
+        android:id="@+id/textView19"
+        android:layout_below="@+id/textView_Date"
+        android:layout_alignRight="@+id/textView15"
+        android:layout_alignEnd="@+id/textView15" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_Players"
+        android:paddingLeft="15dp"
+        android:layout_below="@+id/textView18"
+        android:layout_alignLeft="@+id/textView18"
+        android:layout_alignStart="@+id/textView18" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_Coop"
+        android:paddingRight="15dp"
+        android:layout_below="@+id/textView19"
+        android:layout_alignRight="@+id/textView19"
+        android:layout_alignEnd="@+id/textView19" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/textView_Players"
+        android:paddingTop="15dp"
+        android:id="@+id/line"
+        android:background="@android:color/darker_gray"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
+        android:layout_below="@id/line"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/textView_Deck"
+            android:textAlignment="center"
+            android:text="Deck"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_below="@id/line"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+    </ScrollView>
+
+
+
 
 </RelativeLayout>
